Changed the format!

--- a/code/2D Training.ipynb
+++ b/code/2D Training.ipynb
@@ -4,10 +4,22 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "\n",
+    "# Monkey with the path, so that we can import like rational humans\n",
+    "try:\n",
+    "    import deepseg as ds\n",
+    "except:\n",
+    "    import sys, os\n",
+    "    sys.path.insert(0, os.path.abspath('./../../trace/trace'))"
+   ]
   }
  ],
  "metadata": {
@@ -26,7 +38,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
