--- a/tex/2-background.tex
+++ b/tex/2-background.tex
@@ -1,4 +1,4 @@
-\section{Problem Background and Related Work}
+\chapter{Problem Background and Related Work}
 
 \TODO{Flesh out more background on CNNs}
 
