--- a/tex/4-implementation.tex
+++ b/tex/4-implementation.tex
@@ -1,6 +1,6 @@
-\section{Implementation}
+\chapter{Implementation}
 
-\subsection{Software Design}
+\section{Software Design}
 
 \begin{itemize}
 	\item Modular net definitions
@@ -9,13 +9,13 @@
 	\item Tensorflow
 \end{itemize}
 
-\subsection{Hardware Design}
+\section{Hardware Design}
 
 \begin{itemize}
 	\item GPU Training with immense speedup
 \end{itemize}
 
-\subsection{Deployment Design}
+\section{Deployment Design}
 
 \begin{itemize}
 	\item Docker w/ Nvidia-docker
