--- a/tex/5-training.tex
+++ b/tex/5-training.tex
@@ -1,6 +1,6 @@
-\section{Training}
+\chapter{Training}
 
-\subsection{Regularization}
+\section{Regularization}
 
 \begin{itemize}
 	\item Batch normalization
@@ -8,7 +8,7 @@
 	\item Dropout
 \end{itemize}
 
-\subsection{Data Augmentation}
+\section{Data Augmentation}
 
 \begin{itemize}
 	\item Flipping/Rotating
@@ -16,9 +16,9 @@
 	\item Elastic Deformation
 \end{itemize}
 
-\subsection{Model Training Behavior}
+\section{Model Training Behavior}
 
-\subsubsection{2D Boundary Detection}
+\subsection{2D Boundary Detection}
 
 \begin{itemize}
 	\item N4 and variants
@@ -26,7 +26,7 @@
 	\item U-Net and variants
 \end{itemize}
 
-\subsubsection{3D Segmentation}
+\subsection{3D Segmentation}
 
 \begin{itemize}
 	\item N4 and variants
@@ -35,7 +35,7 @@
 	\item Flood Filling Networks
 \end{itemize}
 
-\subsubsection{Misalignment}
+\subsection{Misalignment}
 
 \begin{itemize}
 	\item Spatial Transformer Networks
