--- a/tex/6-evaluation.tex
+++ b/tex/6-evaluation.tex
@@ -1,5 +1,5 @@
-\section{Evaluation Metrics}
+\chapter{Evaluation Metrics}
 
-\subsection{Pixel Error}
+\section{Pixel Error}
 
-\subsection{Rand Score}
+\section{Rand Score}
