--- a/tex/7-results.tex
+++ b/tex/7-results.tex
@@ -1,6 +1,6 @@
-\section{Results}
+\chapter{Results}
 
-\subsection{2D Boundary Detection}
+\section{2D Boundary Detection}
 
 \begin{itemize}
 	\item N4 and variants
@@ -8,7 +8,7 @@
 	\item U-Net and variants
 \end{itemize}
 
-\subsection{3D Segmentation}
+\section{3D Segmentation}
 
 \begin{itemize}
 	\item N4 and variants
@@ -17,7 +17,7 @@
 	\item Flood Filling Networks
 \end{itemize}
 
-\subsection{Misalignment}
+\section{Misalignment}
 
 \begin{itemize}
 	\item Spatial Transformer Networks
