--- a/code/Ensemble Methods.ipynb
+++ b/code/Ensemble Methods.ipynb
@@ -2,6 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "\n",
+    "# Monkey with the path, so that we can import like rational humans\n",
+    "try:\n",
+    "    import deepseg as ds\n",
+    "except:\n",
+    "    import sys, os\n",
+    "    sys.path.insert(0, os.path.abspath('./../../trace/trace'))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
@@ -26,7 +47,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
